# mini-sdlc-agents

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ci/: pipeline.yaml.sample
docs/: SETUP.md  agents.md  architecture.md  runbooks.md
docs/code planning/: 01_code_plan.txt  01_req.txt
examples/examples/: README.md
examples/expected/: README.md
infra/: Dockerfile.sample  docker-compose.sample.yml
runs/: smoke-20251130-135322.json  smoke-20251130-135639.json  smoke-20251130-140523.json  smoke-20251130-142517.json  usage.json
scripts/: cost_report.py  run_tests.sh  smoke_finalize.py
sdlc-automation-ui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
sdlc-automation-ui/app/: globals.css  layout.tsx  page.tsx
sdlc-automation-ui/app/components-test/: page.tsx
sdlc-automation-ui/components/: README.md
sdlc-automation-ui/lib/: constants.ts
sdlc-automation-ui/stores/: ui.ts
sdlc-automation-ui/types/: agent.ts  requirements.ts
src/adapters/: langchain_adapter.md  openai_adapter.md
src/orchestrator/: pipeline.py  types.py
src/utils/: safety_checklist.md
staging/ui/: document.docx  document2.docx  index.html
templates/: commit_msg_template.txt  issue_template.md
tests/: specs.md  test_client_langchain_model.py  test_contradiction_semantic.py  test_langchain_wrapper.py  test_langsmith_sink.py  test_llm_integration.py  test_repair.py  test_status_autoresolve.py
tests/data/: README.md
(+52 files in other folders)
