[project]
name = "mini-sdlc-agents"
version = "0.1.0"
description = "Minimal SDLC agent pipeline scaffold managed by uv."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]

# Runtime deps (kept minimal). Add as the project grows.
dependencies = [
  "pydantic>=2,<3",
  "pytest>=8,<9",
  "openai>=1,<2",
  "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
